# YTVault

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_TECHNICAL_DETAILS.md  NEW_FEATURES_QUICKSTART.md  Problem_Statement.md  README.md  Technical_Specification.md  docker-compose.yml  e2e_heuristic_evaluation.md  gemini-fash-suggessions.md  pyproject.toml  test_pages_import.py  test_ytdlp.py  validate_build.py
config/: settings.yaml  verified_channels.yaml
config/prompts/: batch_triage_classifier.txt  blueprint_extractor.txt  claim_extractor.txt  comparative_analyst.txt  entity_extractor.txt  epiphany_briefing.txt  map_reduce_summarizer.txt  peer_reviewer.txt  quote_extractor.txt  rag_synthesizer.txt  reference_extractor.txt  research_question_suggester.txt  (+7 more)
docs/: DEVELOPMENT.md  LOGGING_AND_MONITORING.md
scratch/: check_health.py  rescan_all.py  test.py  test_error_str.py  test_ollama_direct.py  test_sqlite_concurrency.py  test_transcript.py  test_validation.py  test_ytdlp_subs.py  test_ytdlp_url.py  verify_db.py  verify_hardening.py  verify_vs_interface.py
scripts/: backfill_intelligence.py  e2e_rescan_test.py  re_triage_pending.py  repair_vault.py  scratch_sync_channels.py  test_phase2_intelligence.py  test_quantitative_rag.py  validate_build.py  verify_imports.py
src/: __init__.py  config.py  main.py
tests/: test_core.py  test_entity_resolver.py  test_export.py  test_intelligence_expansion.py  test_p0_enhancements.py  test_p0_v2.py  test_parallel_ingestion.py  test_pipeline_integration.py  test_query_parser.py  test_week1_enhancements.py
(+132 files in other folders)
